MODINV-1271: Upgrade module to Vert.x 5.0